--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -3,19 +3,10 @@
         <ul class="worldmenu">
           <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 26 ? 'padding-top: 6px' : ''%>"><%= @page[:name].upcase %></a>
             <ul>
-              <% if @page[:name] == "World"   %>
-              <% Page.all(:page_type => "region", :order => [:name.asc]).each do |region_attr| %>
+              <li><a href="<%= @page.parent.url %>"><%= @page.parent.name %></a></li>
+              <% @page.children.each do |region_attr| %>
               <li><a href="<%= region_attr.url %>"><%= region_attr[:name] %></a></li>
               <% end unless @page.children.nil? %>
-              <% else %>
-                <% if @page[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li><% end %>
-                <% if @page[:indicators].include?("Malnutrition") %><li><a href="#" onclick="return wb.setState(null,'Malnutrition')">MDG1: Malnutrition</a></li><% end %>
-                <% if @page[:indicators].include?("Infant Mortality") %><li><a href="#" onclick="return wb.setState(null,'Infant Mortality')">MDG4: Infant Mortality</a></li><% end %>
-                <% if @page[:indicators].include?("Maternal Health") %><li><a href="#" onclick="return wb.setState(null,'Maternal Health')">MDG5: Births attended by skilled health staff</a></li><% end %>
-                <li><a href="#" onclick="return wb.setState(null,null,null,['all'])">Project Portfolio</a></li>
-                <% if @page[:indicators].include?("Poverty") %><li><a href="#" onclick="return wb.setState(null,'Poverty',null,['all'])">Projects by Poverty</a></li><% end %>
-                <% if @page[:indicators].include?("Population") %><li><a href="#" onclick="return wb.setState(null,'Population',null,['all'])">Projects by Population</a></li><% end %>
-              <% end %>
             </ul>
           </li>
         </ul>
