--- a/m4r/views/summary.erb
+++ b/m4r/views/summary.erb
@@ -1,4 +1,4 @@
-<div id="map-summary-container">
+<div id="map-summary-container" style="float: left">
         <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
         	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">total active projects working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">mapped locations</span>
         </h1>
