--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -771,7 +771,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 	  // self.toggleSector("counts_admin1",true);
 	  count = self.country_attrs["projects_count"];
-	  if(count == 0)
+	  if(count == undefined || count == 0)
 	    count = 1;
 	  jq('#project_count').html(count);
 	  jq('#activity_count').html(self.country_attrs["locations_count"]);
