--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -1,13 +1,12 @@
 <div id="chart-left" class="">
   <div id="chart-left-title">
-    <h1 id="sector_funding_title">Active Portfolio by Sector</h1>
+    <h1 id="sector_funding_title">Financed Activities by Sector</h1>
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
     <h2 id="sector_funding_description"></h2>
   </div>
   <div id="chart-left-pie-chart"></div>
-  <div id="chart-left-pie-chart-description" class="chart_about">Financing as a percentage of country and sector financing.</div>
 </div>
 
 <div id="chart-right" class="">
@@ -18,6 +17,5 @@
     <h1 id="funding_total"></h1>
   </div>
   <div id="chart-right-graph"></div>
-  <div id="chart-right-graph-description" class="chart_about"><%= @page[:name] == "World" ? "Financing by each Region across all Sectors" : "Financing by each Product Line across all Projects." %></div>
 </div>
 
