--- a/m4r/views/country.erb
+++ b/m4r/views/country.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="console-info">
         <div id="loading">Loading Map Data...</div>
-        <p class="loaded" style="display: none" title="">active projects working in</p>
+        <p class="loaded" style="display: none" title="">financed activities working in</p>
         <p class="loaded" style="display: none" title="Project locations as of December 31, 2010">mapped project locations</p>
       </div>    
   </div>
