--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -1,5 +1,5 @@
 <ul class="map-options dropmenu">
-              <li class="sectors"><span>PROJECTS: </span></li>
+              <li class="sectors"><span>ACTIVITIES: </span></li>
               <li><a href="#" id="layercontrol_projects" class="arwOrange" onclick="return wb.toggleSector('none',false)">By Sector</a>
               <ul class="dropmenu_options">
                 <li><a href="#" onclick="wb.toggleSector('all', true); return false">By Sector</a></li>
