--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,5 +1,5 @@
   <div id="share">
-  	<ul class="dropmenu">
+  	<ul class="dropmenu map-options">
   	    <% if %w{country}.include?(@page.page_type) %>
           <li class="download"><a title="download" href="#" id="download_data"><span></span>DOWNLOAD</a>     
               <ul class="dropmenu_options" id="data_links">
