--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -100,7 +100,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  this.current_indicator = (country_attrs.indicators != undefined && country_attrs.length > 0) ? country_attrs.indicators[0] : null;
 	  
 	  
-	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/round/agriculture-12.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/round/communication-12.png","Education":"<%= PLATFORM_API_URL %>/images/icons/round/education-12.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/round/energy-12.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/round/finance-12.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/round/health-12.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/round/industry-12.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/round/public-12.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/round/transportation-12.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/round/water-12.png"};
+	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/round/agriculture-16.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/round/communication-16.png","Education":"<%= PLATFORM_API_URL %>/images/icons/round/education-16.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/round/energy-16.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/round/finance-16.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/round/health-16.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/round/industry-16.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/round/public-16.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/round/transportation-16.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/round/water-16.png"};
 	  var color_index = 3;
 	  this.sectors = {
 		"agriculture": {name: "Agriculture, fishing, and forestry", sector_code: "AX", color: self.fadeHex("#8bb131","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/round/agriculture-on.png"}, 
@@ -481,7 +481,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 		var self = this;
 
 		var table = '<table id="project-info"><thead><tr>';
-		jq.each(["Project Title","Project ID","Commitment Amount","Sector","Approval Date","Product Line"], function(index,header) {
+		jq.each(["Title","Project ID","Commitment Amount","Sector","Approval Date","Product Line"], function(index,header) {
 			table += tmpl(table_templates.th, {id: index,header: header});
 		});
 		table += "</tr></thead><tbody>"
@@ -560,7 +560,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 				 
 			var financing_total = funding > 1000 ? (funding/1000).toFixed(2) + " Billion" : funding.toFixed(2) + " Million";
 			jq('#sector_funding_total').html("$" + financing_total); // + " <span class='subtotal' title='Global Financing'>/ $136.912 Billion</span>"
-			jq('#sector_funding_title').html("Active Portfolio by Sector")
+			jq('#sector_funding_title').html("Financed Activities by Sector")
 
 		} else {
 			projects = self.sectors[sector_name].projects;
@@ -771,10 +771,15 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 	  // self.toggleSector("counts_admin1",true);
 	  count = self.country_attrs["projects_count"];
-	  if(count == undefined || count == 0)
+	  if(count == undefined || count == 0) 
 	    count = 1;
 	  jq('#project_count').html(count);
+	  if(count == 1)
+	    jq('#active_projects_header').html("active project working in")
 	  jq('#activity_count').html(self.country_attrs["locations_count"]);
+	  if(self.country_attrs["locations_count"] == 1)
+	    jq('#mapped_locations_header').html("mapped location")
+
 	  if(self.projects != undefined && self.projects != null) {
     	  self.sortProjects(self.projects);
     	  self.projectTable(self.projects);
