--- a/m4r/views/sidebar.erb
+++ b/m4r/views/sidebar.erb
@@ -1,14 +1,13 @@
 <div class="rightCol clearfix" id="rightCol">
   <div id="rightHdr"><a class="mag-glass" href="#"></a></div>
   <div id="rightInfo" class="clearfix">
-    <h3 class="clearfix"><span class="rightHdr">ACTIVE PORTFOLIO BY SECTOR</span> <a class="arwOrange" style="display:none" href="javascript: return false;">BY SECTOR</a></h3>
+    <h3 class="clearfix"><span class="rightHdr">FINANCED ACTIVITIES BY SECTOR</span> <a class="arwOrange" style="display:none" href="javascript: return false;">BY SECTOR</a></h3>
     <span id="chart-left-stat">                
       <h4 id="sector_funding_total" class="bigNumber"></h4>
       <h2 id="sector_funding_description" style="display: none"></h2>
     </span>
     <div id="chart-left-pie-chart"></div>
     <br class="clear" />
-    <span id="chart-left-pie-chart-description" class="chart_about">Financing as a percentage of country and sector financing.</span>
     
     <div style="display:none">
     <div id="chart-right-stat-subtitle">
@@ -19,7 +18,6 @@
     </div>
     <div id="chart-right-graph"></div>
     <br class="clear" />
-    <div id="chart-right-graph-description" class="chart_about"><%= @page[:name] == "World" ? "Financing by each Region across all Sectors" : "Financing by each Product Line across all Projects." %></div>
   </div>        
 
     <a class="moreData" href="http://data.worldbank.org/country/<%= @page[:shortname] %>" title="more data">MORE DATA</a>
