--- a/m4r/views/summary.erb
+++ b/m4r/views/summary.erb
@@ -1,5 +1,5 @@
-<div id="map-summary-container" style="float: left">
+<div id="map-summary-container">
         <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
-        	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">total active projects working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr">mapped locations</span>
+        	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="active_projects_header">financed activities working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="mapped_locations_header">mapped locations</span>
         </h1>
 </div>        
