--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -100,7 +100,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  this.current_indicator = (country_attrs.indicators != undefined && country_attrs.length > 0) ? country_attrs.indicators[0] : null;
 	  
 	  
-	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/round/agriculture-16.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/round/communication-16.png","Education":"<%= PLATFORM_API_URL %>/images/icons/round/education-16.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/round/energy-16.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/round/finance-16.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/round/health-16.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/round/industry-16.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/round/public-16.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/round/transportation-16.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/round/water-16.png"};
+	  this.wbicons = {"Agriculture, fishing, and forestry":"<%= PLATFORM_API_URL %>/images/icons/round/agriculture-12.png","Information and communications":"<%= PLATFORM_API_URL %>/images/icons/round/communication-12.png","Education":"<%= PLATFORM_API_URL %>/images/icons/round/education-12.png","Energy and mining":"<%= PLATFORM_API_URL %>/images/icons/round/energy-12.png","Finance":"<%= PLATFORM_API_URL %>/images/icons/round/finance-12.png","Health and other social services":"<%= PLATFORM_API_URL %>/images/icons/round/health-12.png","Industry and trade":"<%= PLATFORM_API_URL %>/images/icons/round/industry-12.png","Public Administration, Law, and Justice":"<%= PLATFORM_API_URL %>/images/icons/round/public-12.png","Transportation":"<%= PLATFORM_API_URL %>/images/icons/round/transportation-12.png","Water, sanitation and flood protection":"<%= PLATFORM_API_URL %>/images/icons/round/water-12.png"};
 	  var color_index = 3;
 	  this.sectors = {
 		"agriculture": {name: "Agriculture, fishing, and forestry", sector_code: "AX", color: self.fadeHex("#8bb131","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "agriculture", icon: "<%= PLATFORM_API_URL %>/images/icons/round/agriculture-on.png"}, 
@@ -602,8 +602,11 @@ if(typeof(F1)=='undefined') {F1 = {};}
 
 			if(self.stylelayers["Project Locations"] != null)
 				opts["href"] = links;
-				
-			F1.Visualizer.charts.pie(180, 400, pie_options, "chart-left-pie-chart", opts);		  
+			
+			var width = 380;
+			if( self.country_attrs["name"] == "World")
+			    width = 400;
+			F1.Visualizer.charts.pie(180, width, pie_options, "chart-left-pie-chart", opts);		  
 
 	},
 	regionFundingBars: function() {
