--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -604,7 +604,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 				opts["href"] = links;
 			
 			var width = 380;
-			if( self.country_attrs["name"] == "World")
+			if( self.country == "World")
 			    width = 400;
 			F1.Visualizer.charts.pie(180, width, pie_options, "chart-left-pie-chart", opts);		  
 
