--- a/m4r/views/summary.erb
+++ b/m4r/views/summary.erb
@@ -1,4 +1,4 @@
-<div id="map-summary-container">
+<div id="map-summary-container" style="<%= @page.page_type != 'country' ? 'float:left':'' %>">
         <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
         	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="active_projects_header">financed activities working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="mapped_locations_header">mapped locations</span>
         </h1>
