Change more Project copy content

--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -11,7 +11,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Portfolio Overview By <%= @page[:name] == "World" ? "Region" : "Product Line" %></h1>
+    <h1>Financed Activities By <%= @page[:name] == "World" ? "Region" : "Product Line" %></h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
