--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -13,7 +13,7 @@
       <div class="console-info">
         <div id="loading">Loading Map Data...</div>
         <p class="loaded" style="display: none" title="">financed activities working in</p>
-        <p class="loaded" style="display: none" title="Project locations as of December 31, 2010">mapped project locations</p>
+        <p class="loaded" style="display: none" title="">mapped project locations</p>
       </div>    
       <%# partial :layer_controls %>
   </div> -->
