--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -4,7 +4,7 @@
               <ul class="dropmenu_options">
                 <li><a href="#" onclick="wb.toggleSector('all', true); return false">By Sector</a></li>
                 <li><a href="#" onclick="wb.toggleSector('counts_admin1', true); return false">By Count</a></li>
-                <li><a href="#" onclick="wb.toggleSector('none',false); return false">No Projects</a></li>
+                <li><a href="#" onclick="wb.toggleSector('none',false); return false">No Activities</a></li>
               </ul>
             </li>      
 </ul>
