--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -126,7 +126,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	 });
 	 if(map_id != null && map_id.length != 0){
 		 var map_engine = "Wrapper_181";
-         //if(self.country == "World" || self.country_attrs["locations_count"] > 3000) map_engine="Sputnik";
+         if(self.country == "Sputnik" ) map_engine="Sputnik"; //|| self.country_attrs["locations_count"] > 3000
 		 // if("no_flash") map_engine="javascript";
 		 
 		 this.map = new F1.Maker.Map( { dom_id:"wb_map",map_id:map_id, 
