Fix mispelled Caribbean

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -126,7 +126,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	 });
 	 if(map_id != null && map_id.length != 0){
 		 var map_engine = "Wrapper_181";
-         if(self.country == "Latin American & Carribbean"
+         if(self.country == "Latin American & Caribbean"
             || self.country == "Africa" 
             || self.country == "East Asia & the Pacific" 
             || self.country == "Europe and Central Asia"
