--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -131,7 +131,8 @@ if(typeof(F1)=='undefined') {F1 = {};}
             || self.country == "East Asia & the Pacific" 
             || self.country == "Europe and Central Asia"
             || self.country == "Middle East and North Africa"
-            || self.country == "South Asia" ) {
+            || self.country == "South Asia" 
+            || self.country == "Philippines") {
                 map_engine="Sputnik"; //|| self.country_attrs["locations_count"] > 3000
         }
 		 // if("no_flash") map_engine="javascript";
@@ -817,7 +818,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
 	  if(self.country != "World") {
 		// self.map.swf.addLayerCategoryFilter(0, {attribute:"mjsector 1",categories:self.wbicons});
 	  } else if (self.country == "World") {
-		self.map.swf.addLayerInfoWindowFilter(0, {title: "$[Country_1]", subtitle: "", tabs: [{title:"About", type: "text", value: "You can explore the growing list of available project profiles in countries through the 'Locations' option at the bottom of the map."}]}); }
+		self.map.swf.addLayerInfoWindowFilter(0, {title: "$[Country]", subtitle: "", tabs: [{title:"About", type: "text", value: "You can explore the growing list of available project profiles of World Bank activities across the world. $[Description]"}]}); }
 	  // else
 	  //   self.map.swf.addLayerInfoWindowFilter(0, {"title": "$[project title]","subtitle": "$[country]- $[sector1]","tabs": [{"title": "Financing","type": "text","value": "Project ID: \u003Ca target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627\u0026piPK=73230\u0026theSitePK=40941\u0026menuPK=228424\u0026Projectid=$[project id]'\u003E$[project id]\u003C/a\u003E\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt]million"},{"title": "Location","type": "text","value": "Country: $[country]\nProvince: $[adm1]\nDistrict: $[adm2]\nLatitude:$[latitude]\nLongitude:$[longitude]"}]})
 		
